<?xml version="1.0" encoding="utf-8"?>
<resources>
   <string name="app_name">mobflare</string>

   <string name="server_uri">Server URI</string>
   <string name="server_uri_summary">Server to use for coordinating flares</string>
   <string name="search_radius">Search Radius</string>
   <string name="search_radius_summary">Maximum distance (in kilometers) to use when searching for flares</string>


   <string name="flare_name">Flare Name</string>
   <string name="flare_type">Choose Flare Type</string>
   <string name="flare_setting">Flare Properties</string>
   <string name="wait_flare">Awaiting Other Participants</string>
   <string name="flare_timer">Flare Timer</string>
   <string name="creating_flare">Creating flare&#8230;</string>
   <string name="flare_refresh">Searching for flares&#8230;</string>
   <string name="obtaining_location">Obtaining location&#8230;\n(press Back button to cancel and use bogus location)</string>

   <string name="choose_flare">Or choose a nearby flare to join:</string>
   <string name="choose_flare_type">What kind of flare do you want to create?</string>

   <string name="enter_flare_name">All set!  Just one thing more:  give your flare a name so that your participants can select it easily.  You can use the autogenerated one below, or change it to whatever you like.  The flare name is visible to all users, so make sure it is something you are comfortable displaying in public.  Once you click OK, your new flare will be created.</string>

   <string name="flare_type_once">Only one flash, all participants simultaneously</string>
   <string name="flare_type_repeat">Repeat simultaneous flash over and over</string>
   <string name="flare_type_wave">Ripple flash once through all participants</string>
   <string name="flare_type_wave_repeat">Ripple flash through all participants over and over in a cycle</string>


   <string name="participants_required">Participants required:</string>
   <string name="participants_joined">Participants joined so far:</string>

   <string name="number_of_participants">How many people need to join before the countdown can start?</string>
   <string name="number_of_participants_hint">You yourself will be treated as a participant, so if you leave this set to 1, there will be no waiting period before the countdown starts. </string>

   <string name="countdown_seconds">After enough people have joined, how many seconds should the pre-flash countdown last?</string>
   <string name="countdown_seconds_hint">Usually 10 seconds are enough to ensure that all phones will get the firing signal in time, but you can increase this to give optional participants a chance to join in.</string>

   <string name="repeat_seconds">After the first flash, how many seconds should elapse between repeats?</string>
   <string name="repeat_seconds_hint">The flare will keep repeating until all participants quit.</string>

   <string name="stagger">How long should it take (in tenths of a second) for the flash to jump from one person to the next?</string>
   <string name="stagger_hint">A value of 5 yields a half second stagger.  To use this for a wave effect, participants should join the flare in a specific order, with you (the flare creator) as the wave starting point.</string>

   <string name="create_flare">Create Your Own Flare</string>

   <string name="ok">OK</string>

   <string name="total_time_remaining">Time until flash:</string>
   <string name="waiting_for_flare">Waiting for flare:</string>
   <string name="active_flare">Flare in progress:</string>
   <string name="next">Next</string>
   <string name="quit">Quit</string>
   <string name="give_up">Give Up</string>

   <string name="loading">(loading&#8230;)</string>

   <string name="flash">Flash!</string>

   <string name="no_location">Unable to obtain location :(</string>
   <string name="empty_message">No flares found, but you can create one!</string>

   <string name="server_error">Failed to access server</string>
   <string name="duplicate_flare_name">Flare name already in use; please choose another and try again</string>
   <string name="invalid_flare">Oops, selected flare no longer exists</string>
   <string name="need_upgrade">Your client is out of date; please upgrade to the latest version</string>

   <string name="refresh_label">Refresh</string>
   <string name="settings_label">Settings</string>
   <string name="settings_title">Mobflare Settings</string>

   <string name="about_label">About</string>
   <string name="about_title">About</string>
   <string name="about_text">
Mobflare lets you create your own flash mob, literally,
by coordinating camera flashes across an arbitrary
number of phones. It is free and open source
(Apache License v2).
   </string>
   <string name="about_version">mobflare-android v0.1</string>
   <string name="about_copyright">&#169;2012 by Lingering Socket Labs</string>
   <string name="about_author_email">jvs@lingeringsocket.com</string>
   <string name="about_project_url">http://www.mobflare.com</string>

   <string name="help_label">Help</string>
   <string name="help_title">Help</string>
   <string name="help_text">
To use Mobflare, one person starts by
defining the flare, including information
such as how many other people are going
to participate.  Once the new flare has
been created, others nearby can join
it.  Once everyone has joined, a countdown
is initiated, and then all of the cameras
involved will flash simultaneously.
The flare creator can choose to make
the flashes repeat and/or ripple
through the crowd.

If you do not see a newly created flare,
use the Refresh option on the menu.

This application is just for kicks;
have fun thinking of creative uses!
   </string>

</resources>
