<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
   android:layout_height="wrap_content" android:layout_width="fill_parent"
   android:layout_gravity="center">

   <TextView android:text="@string/waiting_for_flare"
      android:layout_width="wrap_content" android:layout_height="wrap_content"
      android:layout_gravity="center" android:textSize="15sp"
      android:layout_marginTop="30dp"></TextView>

   <TextView android:text="" android:id="@+id/flare_name"
      android:layout_width="wrap_content" android:layout_height="wrap_content"
      android:layout_gravity="center" android:textSize="15sp"
      android:textColor="@color/blue"
      android:layout_marginTop="30dp"></TextView>

   <TextView android:text="@string/participants_required"
      android:layout_width="wrap_content" android:layout_height="wrap_content"
      android:textSize="15sp" android:layout_marginTop="30dp"
      android:layout_gravity="center"/>

   <TextView android:text="@string/loading" android:id="@+id/participants_required_num"
      android:layout_width="wrap_content" android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:textSize="15sp" android:layout_marginTop="30dp"
      android:textColor="@color/blue"/>

   <TextView android:text="@string/participants_joined"
      android:layout_width="wrap_content" android:layout_height="wrap_content"
      android:textSize="15sp" android:layout_marginTop="30dp"
      android:layout_gravity="center" />

   <TextView android:text="@string/loading" 
      android:id="@+id/participants_joined_num"
      android:layout_width="wrap_content" android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:textSize="15sp" android:layout_marginTop="30dp"
      android:textColor="@color/blue"/>

   <Button android:text="@string/give_up"
      android:layout_width="wrap_content" android:layout_height="wrap_content"
      android:layout_gravity="center" android:layout_marginTop="15dp"
      android:onClick="onGiveUpClicked" />

</LinearLayout>
